--- a/src/components/topbanner/style.css
+++ b/src/components/topbanner/style.css
@@ -1,12 +1,8 @@
 div.topbanner{
-    /*box-sizing: border-box;*/
-    /*border-top-left-radius: 10px;*/
-    /*border-top-right-radius: 10px;*/
     height: 200px;
     background-color: #EFEFEF;
-    /*padding-left: 10px;*/
-    /*align-items: center;*/
-    /*display: flex;*/
+    padding-left: 10px;
+    padding-top: 10px;
 
 }
 
@@ -18,4 +14,10 @@ center.topbanner{
     top: 110px;
     text-align: center;
     width: 90%;
+}
+
+@media (max-width: 1120px){
+    img.topbanner{
+        display: none;
+    }
 }
