--- a/src/components/topbanner/style.css
+++ b/src/components/topbanner/style.css
@@ -1,6 +1,6 @@
 div.topbanner{
     height: 200px;
-    background-color: #EFEFEF;
+    background-color: #90EE90;
     padding-left: 10px;
     padding-top: 10px;
 
