--- a/src/components/mainbody/style.css
+++ b/src/components/mainbody/style.css
@@ -1,5 +1,5 @@
 div.mainbody{
-    height: 800px;
+    min-height: 650px;
     background-color: #ffffff;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.10);
     max-width: 1337px;
