--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -24,7 +24,23 @@ input.home-form{
     border-color: #707070;
     border-width: 1px;
     margin: 0px 10px;
+}
 
+input.home-form-button{
+    background-color: #333;
+    color: #E2E2E2;
+    box-sizing: border-box;
+    border: 0px;
+    padding: 10px;
+}
+
+input.home-form-button:hover{
+    background-color: #707070;
+}
+
+input.home-form-button:active{
+    scale: 1.05;
+    outline: 2px solid #6CF;
 }
 
 .home-form-icon{
