--- a/src/components/message/style.css
+++ b/src/components/message/style.css
@@ -16,3 +16,22 @@ h2.error-msg{
     font-size: 20px;
     font-weight: bold;
 }
+
+div.success-msg{
+    min-width: 150px;
+    max-width: 500px;
+    border-style: solid;
+    border-width: 1px;
+    padding: 10px;
+    margin: 10px;
+    display: -ms-flexbox;
+    box-sizing: border-box;
+    border-color: #090;
+    background-color: #DFD;
+    color: #090;
+}
+
+h2.success-msg{
+    font-size: 20px;
+    font-weight: bold;
+}
